--- a/people-table/index.html
+++ b/people-table/index.html
@@ -13,34 +13,38 @@
             body {
                 font-family: 'Roboto', sans-serif;
                 font-size: large;
+                margin-top: 15px;
             }
 
-            th, td {
-                border: .5px solid #7a4ee9;
+            input {
+                max-width: 50%;
+                float: left;
+            }
+
+            button {
+                text-decoration: none;
+                color: #fff;
+                background-color: #7a4ee9;
+                border: none;
                 padding: 5px;
+                margin: 0px 0px 0px 5px;
+                float: left;
             }
 
-            th {
-                font-weight: strong;
-                background-color: #d7c9f8;
+            p {
+                clear: left;
+            }
+
+            th:hover {
+                background-color: #7a4ee9;
             }
 
             .content-container {
                 text-align: center;
                 width: 50%;
-                padding: 0px 20px;
                 margin: auto;
             }
 
-            a, button {
-                text-decoration: none;
-                color: #fff;
-                background-color: #7a4ee9;
-                border: none;
-                padding: 10px;
-                margin: 20px 0px;
-                display: inline-block;
-            }
         </style>
     </head>
     <body>
