Add person to people array and fix indentation

--- a/people-table/index.html
+++ b/people-table/index.html
@@ -80,24 +80,29 @@
 <script>
     const people = [
         {
-        firstName: 'Stan',
-        lastName: 'Marsh',
-        hairColor: 'brown'
+            firstName: 'Stan',
+            lastName: 'Marsh',
+            hairColor: 'brown'
         },
         {
-        firstName: 'Anne',
-        lastName: 'Warbucks',
-        hairColor: 'red'
+            firstName: 'Anne',
+            lastName: 'Warbucks',
+            hairColor: 'red'
         },
         {
-        firstName: 'Johnny',
-        lastName: 'Rotten',
-        hairColor: 'blonde'
+            firstName: 'Johnny',
+            lastName: 'Rotten',
+            hairColor: 'blonde'
         },
         {
-        firstName: 'Johnny',
-        lastName: 'Walker',
-        hairColor: 'black'
+            firstName: 'Marge',
+            lastName: 'Simpson',
+            hairColor: 'blue'
+        },
+        {
+            firstName: 'Johnny',
+            lastName: 'Walker',
+            hairColor: 'black'
         }
     ]
 
