Add person object to people array

--- a/people-table/index.html
+++ b/people-table/index.html
@@ -100,6 +100,11 @@
             hairColor: 'blue'
         },
         {
+            firstName: 'Homer',
+            lastName: 'Simpson',
+            hairColor: 'bald'
+        },
+        {
             firstName: 'Johnny',
             lastName: 'Walker',
             hairColor: 'black'
