--- a/people-table/index.html
+++ b/people-table/index.html
@@ -32,6 +32,8 @@
             }
 
             p {
+                padding-top: 20px;
+                padding-bottom: 5px;
                 clear: left;
             }
 
