Change button and th:hover color

--- a/people-table/index.html
+++ b/people-table/index.html
@@ -24,7 +24,7 @@
             button {
                 text-decoration: none;
                 color: #fff;
-                background-color: #7a4ee9;
+                background-color: #613eba;
                 border: none;
                 padding: 5px;
                 margin: 0px 0px 0px 5px;
@@ -38,7 +38,7 @@
             }
 
             th:hover {
-                background-color: #7a4ee9;
+                background-color: #613eba;
             }
 
             .content-container {
