--- a/people-table/index.html
+++ b/people-table/index.html
@@ -49,7 +49,13 @@
 
             .filter {
                 padding-top: 15px;
-            }            
+            }  
+
+            @media only screen and (max-width: 465px) {
+                .content-container {
+                    width: 95%;
+                }
+            }          
         </style>
     </head>
     <body>
